fix logo overflow on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -762,11 +762,11 @@ footer {
     }
 
     .gold img {
-        max-width: 95vw;
+        max-width: 85vw;
     }
 
     .co-host img {
-        max-width: 95vw;
+        max-width: 85vw;
     }
 }
 
